# blackhat-python

./: README.md  process_monitor_log.csv  pyproject.toml
01_networking/: netcat.py  proxy.py  ssh_cmd.py  ssh_rcmd.py  ssh_server.py  tcp_client.py  tcp_server.py  udp_client.py
02_scanandsniff/: scanner.py  sniffer.py  sniffer_ip_header_decode.py  sniffer_with_icmp.py
03_scapytools/: arper.py  mail_sniffer.py  recapper.py
04_facefinder/: detector.py
05_web/: all.txt  bruter.py  wp_killer.py  wp_mapper.py
06_githubtrojan/: dirlister.py  environment.py  github_trojan.py
07_windowstrojantasks/: keylogger.py  sandbox_detect.py  screenshotter.py  shell_exec.py
08_exfitration/: cryptor.py  email_exfil.py  exfil.py  paste_exfil.py  transmit_exfil.py
09_privescalation/: file_monitor.py  process_monitor.py
09_privescalation/bhservice/: bhservice.py
10_offensiveforensics/: aslrcheck.py
