[tool.poetry]
name = "blackhat-python"
version = "0.1.0"
description = "Tools from Black Hat Python"
authors = ["Lucas Melin <lucas.melin@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
scapy = "^2.4.5"
paramiko = "^2.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
